-Fixes config styles, truncate text, reponsive

--- a/Resources/assets/sass/front/_total-box.scss
+++ b/Resources/assets/sass/front/_total-box.scss
@@ -21,6 +21,7 @@ body {
     .title {
       @include font(16, 18, 400);
       text-transform: uppercase;
+      overflow: hidden;
       height: 35px;
       i {
         margin-right: 4px;
@@ -28,11 +29,7 @@ body {
     }
     .totalBox {
       margin-bottom: 10px;
-      // font-size: 2.5vw;
-      @media (max-width: 991px) {
-        font-size: 45px;
-      }
-      font-weight: 100;
+      font-weight: 100; 
       line-height: 35px;
     }
 
@@ -43,15 +40,10 @@ body {
       margin-left: 1px;
 
       i {
-        // font-size: 2.5vw;
-        @media (max-width: 991px) {
-          // font-size: 50px;
-        }
         color: #98a0aa;
       }
     }
     .container-parameters {
-      padding-right: 0;
       display: flex;
       flex-direction: column;
       justify-content: center;
